Particles and started oscillating blocks

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 [Bb]uild/
 [Bb]uilds/
 Assets/AssetStoreTools*
+Assets/KriptoFX*
 
 # Visual Studio cache directory
 .vs/
@@ -34,3 +35,5 @@ sysinfo.txt
 # Builds
 *.apk
 *.unitypackage
+
+
